# popen-noshell

./: Makefile  README.md  configure.ac  test.c
src/: Makefile.am  libpopennoshell.pc.in  popen-noshell.c  popen-noshell.h  test.c
