AC_PREREQ([2.59])
AC_INIT([popen-noshell], [0.1], [lol@jews.il], [popen-noshell], [https://github.com/ticklemynausea/popen-noshell])
AC_CONFIG_SRCDIR([src/popen-noshell.c])
AM_INIT_AUTOMAKE([1.9])
AC_CONFIG_MACRO_DIR([m4])

AC_LANG_C
AC_PROG_LIBTOOL

AC_CONFIG_FILES([Makefile])
AC_CONFIG_FILES([src/Makefile])

AC_OUTPUT
